<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".HomeActivity">

    <item
        android:id="@+id/add_account"
        android:title="@string/add_account"
        app:showAsAction="never" />

    <item
        android:id="@+id/choose_account"
        android:title="@string/choose_account"
        app:showAsAction="never" />


    <item
        android:id="@+id/manage_account"
        android:title="@string/view_account"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_account"
        android:title="@string/delete_account"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_e4_settings"
        android:title="@string/set_e4_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/log_out"
        android:title="@string/log_out"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>