<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FAFAFA"
    tools:context="com.example.android.teacher.HelpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Steps before starting session "
        android:textColor="#E91E63"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="20dp"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="#EEEEEE"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/step0CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:checked="false"
            android:padding="15dp"
            android:text="@string/step0"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/step1CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:checked="false"
            android:padding="15dp"
            android:text="@string/step1"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/step2CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:checked="false"
            android:padding="15dp"
            android:text="@string/step2"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/step3CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:checked="false"
            android:padding="15dp"
            android:text="@string/step3"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/step5CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:checked="false"
            android:padding="15dp"
            android:text="@string/step5"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/step6CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:checked="false"
            android:padding="15dp"
            android:text="@string/step6"
            android:textSize="20sp" />
        <CheckBox
            android:id="@+id/step7CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:checked="false"
            android:padding="15dp"
            android:text="@string/step7"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>
